[tool.poetry]
name = "nextcord-ol"
version = "0.1.0"
description = "Nextcord but in one line :)"
authors = ["ooliver1 <oliverwilkes2006@icloud.com>", "teaishealthy <teaishealthy@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.8.0,<4.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
libcst = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
